# centric-selection

./: README.md  pyproject.toml  test_multiple_pow.sh
example/: high_stake.json  list_node_example_conf_paper.json  list_node_example_conf_paper.txt  low_stake.json  neutral.json  random.json
sample/: GA_scan.py  GA_scan_parallele.py  center_graphical.py  center_scan.py  center_stake.py  center_stake_bal.py  center_torch.py  fonctionGraph.py  gain_proba.py  generateListNode.py  gini_analyse.py  merge_GA_results.py  merge_stake_csv.py  monte_carlo_approx.py  plot_file.py  prevision_gin_stake.py  proba_select_val.py  random_scan.py  stability_gini.py  stake_gen.py
