[project]
name = "centric-selection"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numba>=0.64.0",
    "numpy>=2.4.4",
    "pandas>=2.3.0",
    "pymoo>=0.6.1.6",
    "scipy>=1.17.1",
    "torch>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.2.0",
    "pandas-stubs~=2.3.0",
    "pyrefly>=0.58.0",
]